objects/ADP_Default_Team_Members__c.object
<CustomObject>
    <description>Related list showing associated team members.</description>
    <fields>
        <fullName>ADP_Default_Team__c</fullName>
        <description>Parentid</description>
        <label>ADP_Default_Team</label>
        <referenceTo>ADP_Default_Team__c</referenceTo>
        <relationshipName>R00N40000001mWJMEA2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Access__c</fullName>
        <label>Account Access</label>
        <picklist>
            <picklistValues>
                <fullName>Full Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISR_Group__c</fullName>
        <formula>CASE( Team_Member__r.ISR_Group__c , &quot;G1&quot;, &quot;G1&quot;, &quot;G2&quot;, &quot;G2&quot;, &quot;G3&quot;, &quot;G3&quot;, &quot;G4&quot;, &quot;G4&quot;, &quot;G5&quot;, &quot;G5&quot;, &quot;G6&quot;, &quot;G6&quot;, &quot;G7&quot;, &quot;G7&quot;, &quot; &quot;)</formula>
        <label>ISR_Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Access__c</fullName>
        <label>Opportunity Access</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001mWJPEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Forecasting - Baseline Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - CDP ISR Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Digital Solutions Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Enterprise Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Inside Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - National Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - NIADA Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Retail Solutions Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Saturn Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Telephony Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Forecasting Rep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>ADP Default Team Member</label>
    <nameField>
        <displayFormat>ID - {0000}</displayFormat>
        <label>ADP Default Team Members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ADP Default Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>